Inclusão do H2 de e-mail

--- a/src/app/shared/component/contato/contato.component.html
+++ b/src/app/shared/component/contato/contato.component.html
@@ -12,6 +12,7 @@
         </div>
     </div>
     <div class="col-6">
+        <h2>E-mail</h2>
         <form #emailForm="ngForm" *ngIf="email">
             <div class="mb-3 row">
                 <div class="col-6">
