--- a/src/app/shared/component/contato/contato.component.css
+++ b/src/app/shared/component/contato/contato.component.css
@@ -1,5 +1,8 @@
 .redes-sociais > div > a{
     text-decoration: none;
+}
+
+.redes-sociais > div > a > img{
     max-width: 40px;
     max-height: 40px;
 }
