--- a/src/app/shared/component/contato/contato.component.html
+++ b/src/app/shared/component/contato/contato.component.html
@@ -1,17 +1,17 @@
 <div class="row container" id="contato">
-    <h2>Contato</h2>
-    <div class="col-6">
+    <div class="col-6 text-center">
+        <h2>Contato</h2>
         <p>Ficou com alguma dúvida? Não perca tempo! Nos envie um e-mail ou acesse nossas redes sociais.</p>
         <hr>
-        <div class="row justify-content-center redes-sociais">
-            <h3>Nossas Redes Sociais:</h3>
-            <div class="col-2 "><a href="https://api.whatsapp.com/send?phone=5511940420471&text=Ol%C3%A1%2C%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20o%20desenvolvimento%20de%20um%20Site%20para%20minha%20empresa!"><img src="/assets/img/whatsapp.png" alt="WhatsApp"></a></div>
-            <div class="col-2"><a href="#"><img src="/assets/img/facebook.png" alt="Facebook"></a></div>
-            <div class="col-2"><a href="#"><img src="/assets/img/instagram.png" alt="Instagram"></a></div>
-            <div class="col-2"><a href="#"><img src="/assets/img/twitter.png" alt="Twiter"></a></div>
+        <div class="row justify-content-center text-center redes-sociais">
+            <h3>Nossas Redes Sociais</h3>
+            <div class="col-1"><a href="https://api.whatsapp.com/send?phone=5511940420471&text=Ol%C3%A1%2C%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20o%20desenvolvimento%20de%20um%20Site%20para%20minha%20empresa!"><img src="/assets/img/whatsapp.png" alt="WhatsApp"></a></div>
+            <div class="col-1"><a href="#"><img src="/assets/img/facebook.png" alt="Facebook"></a></div>
+            <div class="col-1"><a href="#"><img src="/assets/img/instagram.png" alt="Instagram"></a></div>
+            <div class="col-1"><a href="#"><img src="/assets/img/twitter.png" alt="Twiter"></a></div>
         </div>
     </div>
-    <div class="col-6">
+    <div class="col-6 text-center">
         <h2>E-mail</h2>
         <form #emailForm="ngForm" *ngIf="email">
             <div class="mb-3 row">
