--- a/src/app/shared/component/contato/contato.component.html
+++ b/src/app/shared/component/contato/contato.component.html
@@ -5,11 +5,11 @@
         <hr>
         <div class="row justify-content-center text-center redes-sociais">
             <h3>Nossas Redes Sociais</h3>
-            <div class="col-sm-12 col-6">
+            <div class="col-sm-12 col-6 row">
                 <div class="col-1"><a href="https://api.whatsapp.com/send?phone=5511940420471&text=Ol%C3%A1%2C%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20o%20desenvolvimento%20de%20um%20Site%20para%20minha%20empresa!"><img src="/assets/img/whatsapp.png" alt="WhatsApp"></a></div>
                 <div class="col-1"><a href="#"><img src="/assets/img/facebook.png" alt="Facebook"></a></div>
             </div>
-            <div class="col-sm-12 col-6">
+            <div class="col-sm-12 col-6 row">
                 <div class="col-1"><a href="#"><img src="/assets/img/instagram.png" alt="Instagram"></a></div>
                 <div class="col-1"><a href="#"><img src="/assets/img/twitter.png" alt="Twiter"></a></div>
             </div>
@@ -20,14 +20,14 @@
         <h2>E-mail</h2>
         <form #emailForm="ngForm" *ngIf="email">
             <div class="mb-3 row">
-                <div class="col-sm-12 col-6">
+                <div class="col-xs-12 col-sm-12 col-md-6">
                     <label for="nome" class="form-label">Nome</label>
                     <input [(ngModel)]="email.nome" name="nome" #emailNome="ngModel" type="text" class="form-control" id="nome" placeholder="Afonso Abreu" required>
                     <div class="invalid-feedback">
                         <span>Nome é obrigatório.</span>
                     </div>
                 </div>
-                <div class="col-sm-12 col-6">
+                <div class="col-xs-12 col-sm-12 col-md-6">
                     <label for="email" class="form-label">E-mail</label>
                     <input [(ngModel)]="email.email" name="email" #emailEmail="ngModel" type="email" class="form-control" id="email" placeholder="afonsoabreu@exemplo.com.br" required>
                     <div class="invalid-feedback">
