--- a/src/app/shared/component/contato/contato.component.html
+++ b/src/app/shared/component/contato/contato.component.html
@@ -3,13 +3,13 @@
         <h2>Contato</h2>
         <p>Ficou com alguma dúvida? Não perca tempo! Nos envie um e-mail ou acesse nossas redes sociais.</p>
         <hr>
-        <div class="row justify-content-center text-center redes-sociais">
+        <div class="row justify-content-center text-center redes-sociais d-flex">
             <h3>Nossas Redes Sociais</h3>
             
-            <div class="col-xs-6 col-sm-6 col-md-1"><a href="https://api.whatsapp.com/send?phone=5511940420471&text=Ol%C3%A1%2C%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20o%20desenvolvimento%20de%20um%20Site%20para%20minha%20empresa!"><img src="/assets/img/whatsapp.png" alt="WhatsApp"></a></div>
-            <div class="col-xs-6 col-sm-6 col-md-1"><a href="#"><img src="/assets/img/facebook.png" alt="Facebook"></a></div>
-            <div class="col-xs-6 col-sm-6 col-md-1"><a href="#"><img src="/assets/img/instagram.png" alt="Instagram"></a></div>
-            <div class="col-xs-6 col-sm-6 col-md-1"><a href="#"><img src="/assets/img/twitter.png" alt="Twiter"></a></div>
+            <a href="https://api.whatsapp.com/send?phone=5511940420471&text=Ol%C3%A1%2C%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20o%20desenvolvimento%20de%20um%20Site%20para%20minha%20empresa!"><img src="/assets/img/whatsapp.png" alt="WhatsApp"></a>
+            <a href="#"><img src="/assets/img/facebook.png" alt="Facebook"></a>
+            <a href="#"><img src="/assets/img/instagram.png" alt="Instagram"></a>
+            <a href="#"><img src="/assets/img/twitter.png" alt="Twiter"></a>
             
         </div>
     </div>
