--- a/src/app/shared/component/contato/contato.component.html
+++ b/src/app/shared/component/contato/contato.component.html
@@ -5,12 +5,12 @@
         <hr>
         <div class="row justify-content-center text-center redes-sociais d-flex">
             <h3>Nossas Redes Sociais</h3>
-            
-            <a href="https://api.whatsapp.com/send?phone=5511940420471&text=Ol%C3%A1%2C%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20o%20desenvolvimento%20de%20um%20Site%20para%20minha%20empresa!"><img src="/assets/img/whatsapp.png" alt="WhatsApp"></a>
-            <a href="#"><img src="/assets/img/facebook.png" alt="Facebook"></a>
-            <a href="#"><img src="/assets/img/instagram.png" alt="Instagram"></a>
-            <a href="#"><img src="/assets/img/twitter.png" alt="Twiter"></a>
-            
+            <div class="d-flex flex-row justify-content-center">
+                <a href="https://api.whatsapp.com/send?phone=5511940420471&text=Ol%C3%A1%2C%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20o%20desenvolvimento%20de%20um%20Site%20para%20minha%20empresa!"><img src="/assets/img/whatsapp.png" alt="WhatsApp"></a>
+                <a href="#"><img src="/assets/img/facebook.png" alt="Facebook"></a>
+                <a href="#"><img src="/assets/img/instagram.png" alt="Instagram"></a>
+                <a href="#"><img src="/assets/img/twitter.png" alt="Twiter"></a>
+            </div>
         </div>
     </div>
     <div class="col-6 text-center">
